RESOLVED FIXED222380
Regression(r269481) Kugou Music: Can not leave "MV" category after selecting it
https://bugs.webkit.org/show_bug.cgi?id=222380
Summary Regression(r269481) Kugou Music: Can not leave "MV" category after selecting it
Chris Dumez
Reported 2021-02-24 13:50:52 PST
Kugou Music: Can not leave "MV" category after selecting it.
Attachments
Patch (4.51 KB, patch)
2021-02-24 13:53 PST, Chris Dumez
no flags
Chris Dumez
Comment 1 2021-02-24 13:51:04 PST
Chris Dumez
Comment 2 2021-02-24 13:53:17 PST
Geoffrey Garen
Comment 3 2021-02-24 14:15:13 PST
Comment on attachment 421454 [details] Patch r=me
EWS
Comment 4 2021-02-24 15:02:05 PST
Committed r273442: <https://commits.webkit.org/r273442> All reviewed patches have been landed. Closing bug and clearing flags on attachment 421454 [details].
Note You need to log in before you can comment on or make changes to this bug.