Regression(r269481) Kugou Music: Can not leave "MV" category after selecting it https://bugs.webkit.org/show_bug.cgi?id=222380 <rdar://74602294>

Reviewed by Geoffrey Garen.

The new behavior in r269481 aligns us with the specification and with Blink so I
am adding a linked-on-after to maintain pre-r269481 behavior until Apps get
rebuilt against the new SDK.

* html/HTMLDocument.cpp:
(WebCore::HTMLDocument::supportedPropertyNames const):
* page/Quirks.cpp:
(WebCore::Quirks::shouldOmitHTMLDocumentSupportedPropertyNames):
* page/Quirks.h:
* platform/cocoa/VersionChecks.h:


Canonical link: https://commits.webkit.org/234537@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@273442 268f45cc-cd09-0410-ab3c-d52691b4dbfc