Source/WebCore/html/HTMLDocument.cpp
@@ -74,6 +74,7 @@
 #include "HTMLHtmlElement.h"
 #include "HTMLIFrameElement.h"
 #include "HTMLNames.h"
+#include "Quirks.h"
 #include "ScriptController.h"
 #include "StyleResolver.h"
 #include <wtf/IsoMallocInlines.h>
@@ -140,6 +141,9 @@ Optional<Variant<RefPtr<WindowProxy>, RefPtr<Element>, RefPtr<HTMLCollection>>> 
 
 Vector<AtomString> HTMLDocument::supportedPropertyNames() const
 {
+    if (Quirks::shouldOmitHTMLDocumentSupportedPropertyNames())
+        return { };
+
     auto properties = m_documentNamedItem.keys();
     // The specification says these should be sorted in document order but this would be expensive
     // and other browser engines do not comply with this part of the specification. For now, just
